opencli-rs/tui/src/status/snapshots/opencli_tui__status__tests__status_snapshot_includes_credits_and_limits.snap
---
source: tui/src/status/tests.rs
assertion_line: 688
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────╮
│  >_ opencli (v0.94.0)                                             │
│                                                                   │
│ Visit https://chatgpt.com/opencli/settings/usage for up-to-date   │
│ information on rate limits and credits                            │
│                                                                   │
│  Model:            test-model (reasoning none, summaries auto)    │
│  Directory: [[workspace]]                                         │
│  Approval:         on-request                                     │
│  Sandbox:          read-only                                      │
│  Agents.md:        <none>                                         │
│                                                                   │
│  Token usage:      2K total  (1.4K input + 600 output)            │
│  Context window:   100% left (2.2K used / 131K)                   │
│  5h limit:         [███████████░░░░░░░░░] 55% left (resets 09:25) │
│  Weekly limit:     [██████████████░░░░░░] 70% left (resets 09:55) │
│  Credits:          38 credits                                     │
╰───────────────────────────────────────────────────────────────────╯
