opencli-rs/tui/src/status/snapshots/opencli_tui__status__tests__status_snapshot_includes_reasoning_details.snap
---
source: tui/src/status/tests.rs
assertion_line: 166
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────────╮
│  >_ opencli (v0.94.0)                                                  │
│                                                                        │
│ Visit https://chatgpt.com/opencli/settings/usage for up-to-date        │
│ information on rate limits and credits                                 │
│                                                                        │
│  Model:            test-model-max (reasoning high, summaries detailed) │
│  Directory: [[workspace]]                                              │
│  Approval:         on-request                                          │
│  Sandbox:          workspace-write                                     │
│  Agents.md:        <none>                                              │
│                                                                        │
│  Token usage:      1.9K total  (1K input + 900 output)                 │
│  Context window:   100% left (2.25K used / 131K)                       │
│  5h limit:         [██████░░░░░░░░░░░░░░] 28% left (resets 03:14)      │
│  Weekly limit:     [███████████░░░░░░░░░] 55% left (resets 03:24)      │
╰────────────────────────────────────────────────────────────────────────╯
