opencli-rs/tui/src/status/snapshots/opencli_tui__status__tests__status_snapshot_shows_missing_limits_message.snap
---
source: tui/src/status/tests.rs
assertion_line: 621
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────╮
│  >_ opencli (v0.94.0)                                              │
│                                                                    │
│ Visit https://chatgpt.com/opencli/settings/usage for up-to-date    │
│ information on rate limits and credits                             │
│                                                                    │
│  Model:            test-model-max (reasoning none, summaries auto) │
│  Directory: [[workspace]]                                          │
│  Approval:         on-request                                      │
│  Sandbox:          read-only                                       │
│  Agents.md:        <none>                                          │
│                                                                    │
│  Token usage:      750 total  (500 input + 250 output)             │
│  Context window:   100% left (750 used / 131K)                     │
│  Limits:           data not available yet                          │
╰────────────────────────────────────────────────────────────────────╯
